--- a/po/meson.build
+++ b/po/meson.build
@@ -1,5 +1,6 @@
 i18n.gettext(meson.project_name(),
     args: '--directory=' + meson.project_source_root(),
+    install: false,
     preset: 'glib'
 )
 
