--- a/data/pachy.desktop.in
+++ b/data/pachy.desktop.in
@@ -6,6 +6,6 @@ Name=Pachy
 Comment=Mastodon Client for the Elementary OS Desktop
 Categories=Internet;
 
-Icon=com.github.leggettc18.pachy
+#Icon=com.github.leggettc18.pachy
 Exec=com.github.leggettc18.pachy
 Terminal=false
