--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/elementary/flatpak-platform/runtime:7.2
-      options: --priveleged
+      options: --privileged
     steps:
       - uses: actions/checkout@v3
       - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
