--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,9 @@
 sources = [
     'Application.vala',
+    'Settings.vala',
+    'MainWindow.vala',
+    'Dialogs/Authentication.vala',
+    'Services/Mastodon.vala'
 ]
 
 executable(
