--- a/com.github.leggettc18.pachy.yml
+++ b/com.github.leggettc18.pachy.yml
@@ -7,6 +7,10 @@ finish-args:
   - '--share=ipc'
   - '--socket=fallback-x11'
   - '--socket=wayland'
+  - '--device=dri'
+  - '--share=network'
+  - '--filesystem=xdg-run/gvfsd'
+  - '--talk-name=org.gtk.vfs.*'
 modules:
   - name: pachy
     buildsystem: meson
