--- a/src/Config.vala.in
+++ b/src/Config.vala.in
@@ -1,4 +1,5 @@
-namespace Constants {
+namespace Pachy.Constants {
     public const string GETTEXT_PACKAGE = @GETTEXT_PACKAGE@;
     public const string LOCALEDIR = @LOCALEDIR@;
+    public const string CLIENT_NAME = "Pachy";
 }
