Redone account storage to libsecret
Allows secure storage of tokens and also allows for multiple accounts in the future the way it was coded. Also added a framework around handling the HTTP requests and serializing/deserializing account data to/from JSON.

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,7 +2,9 @@ sources += files(
     'Application.vala',
     'Settings.vala',
     'MainWindow.vala',
-    'Dialogs/Authentication.vala',
-    'Services/Mastodon.vala'
 )
+
+subdir ('API')
+subdir ('Services')
+subdir ('Dialogs')
 
