Adds avatar to the main window (will be somewhere else later)

--- a/src/meson.build
+++ b/src/meson.build
@@ -4,7 +4,7 @@ sources += files(
     'MainWindow.vala',
 )
 
-subdir ('API')
-subdir ('Services')
-subdir ('Dialogs')
-
+subdir('API')
+subdir('Services')
+subdir('Dialogs')
+subdir('Widgets')
