--- a/src/API/meson.build
+++ b/src/API/meson.build
@@ -1,4 +1,7 @@
 sources += files (
     'Account.vala',
+    'AccountHolder.vala',
     'Entity.vala',
+    'Place.vala',
+    'Widgetizable.vala',
 )
