Adds support for emojis in account display name

--- a/src/API/meson.build
+++ b/src/API/meson.build
@@ -1,6 +1,7 @@
 sources += files (
     'Account.vala',
     'AccountHolder.vala',
+    'Emoji.vala',
     'Entity.vala',
     'Place.vala',
     'Widgetizable.vala',
