--- a/src/Views/meson.build
+++ b/src/Views/meson.build
@@ -1,6 +1,9 @@
 sources += files (
     'Base.vala',
+    'ContentBase.vala',
+    'Home.vala',
     'Main.vala',
     'Sidebar.vala',
     'TabbedBase.vala',
+    'Timeline.vala',
 )
