Handling of Mentions

--- a/src/API/meson.build
+++ b/src/API/meson.build
@@ -3,6 +3,7 @@ sources += files (
     'AccountHolder.vala',
     'Emoji.vala',
     'Entity.vala',
+    'Mention.vala',
     'Place.vala',
     'Status.vala',
     'Widgetizable.vala',
