Actions, Reactions, Open in Browser, Copy to Clipboard

--- a/src/API/meson.build
+++ b/src/API/meson.build
@@ -2,6 +2,7 @@ sources += files (
     'Account.vala',
     'AccountHolder.vala',
     'Emoji.vala',
+    'EmojiReaction.vala',
     'Entity.vala',
     'Mention.vala',
     'Place.vala',
